--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
+                <configuration>
+                    <includes>
+                        <include>**/UserTest.java</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
