--- a/.github/workflows/rest-assured-tests.yml
+++ b/.github/workflows/rest-assured-tests.yml
@@ -27,3 +27,39 @@ jobs:
 
       - name: Run tests
         run: ./mvnw test -B
+
+      - name: Upload Surefire XML Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-xml-report
+          path: target/surefire-reports/
+
+      - name: Publish JUnit Test Results in GitHub UI
+        if: always()
+        uses: dorny/test-reporter@v2.1.0
+        with:
+          name: JUnit Test Results
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
+          only-summary: false
+
+      - name: Download Allure CLI
+        if: always()
+        run: |
+          wget https://github.com/allure-framework/allure2/releases/download/2.34.0/allure-2.34.0.zip -O allure.zip
+          unzip -q allure.zip -d allure-cli
+          chmod +x allure-cli/allure-2.34.0/bin/allure
+
+      - name: Generate Allure HTML Report from Surefire XML
+        if: always()
+        run: |
+          ./allure-cli/allure-2.34.0/bin/allure generate --clean --plugins junit-xml-plugin target/surefire-reports target/allure-report
+
+      - name: Upload Allure HTML Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: target/allure-report
